--- a/latexguidelines/showcases.tex
+++ b/latexguidelines/showcases.tex
@@ -37,8 +37,8 @@ Grammaticality judgments can be added in brackets. Note that in this case, brace
 \newpage
 \begin{verbatim}
 \ea[*]{
-  \gll  Der Mann schläft.\\
-        the man  sleeps\\
+  \gll  Der Mann schlafen.\\
+        the man  sleep\\
   \glt `(The man sleeps.)'
   }
 \z
@@ -55,8 +55,8 @@ Lists of examples can be typeset with nested \verb+\ea+  and \verb+\z+  respecti
      einen Nobelpreis gewonnen zu haben.\\
      I believe the linguist not 
      a Nobel.prize won to have\\
-\glt  `I don't believe linguist's claim 
-      that he won a Nobel prize.'
+\glt `I don't believe linguist's claim 
+     that he won a Nobel prize.'
 }
 \ex[*]{
 \gll Dem Linguisten einen Nobelpreis  glaube  
@@ -72,10 +72,10 @@ Lists of examples can be typeset with nested \verb+\ea+  and \verb+\z+  respecti
 \ea 
  \ea[]{
  \gll Ich glaube dem Linguisten nicht, 
-     einen Nobelpreis gewonnen zu haben.\\
-     I believe the linguist not 
-     a Nobel.prize won to have\\
- \glt  `I don't believe linguist's claim 
+      einen Nobelpreis gewonnen zu haben.\\
+      I believe the linguist not 
+      a Nobel.prize won to have\\
+ \glt `I don't believe linguist's claim 
       that he won a Nobel prize.'
 }
 \end{verbatim}
