--- a/latexguidelines/wrap-global.tex
+++ b/latexguidelines/wrap-global.tex
@@ -17,7 +17,8 @@
 \input{localcommands.tex}
 \bibliography{lsp-abbrev,lsp-guidelines}
 \begin{document}                
-\maketitle                
+\maketitle    
+\include{inanutshell}
 \tableofcontents      
 \mainmatter     
 
