--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -58,7 +58,7 @@ Be aware that the book will not be printed on A4\slash letter paper. Our paper i
 
 
 \begin{table}
-\begin{tabularx}{\textwidth}{l>{\raggedright}XXXXX}
+\begin{tabularx}{\textwidth}{l>{\raggedright}XXXXl}
 \lsptoprule
  & English & German & French & Spanish & Italian  \\
 \midrule
@@ -80,7 +80,7 @@ Be aware that the book will not be printed on A4\slash letter paper. Our paper i
 
 
 \begin{table}
-\begin{tabularx}{\textwidth}{lXXXXX}
+\begin{tabularx}{\textwidth}{lXXXXl}
 \lsptoprule
  & English & German & French & Spanish & Italian  \\
 \midrule
@@ -184,7 +184,7 @@ Example sentences are in italics/roman depending on the subcommunity. Currently,
 
 \subsection{Quotations}
 
-If long passages are quoted, they should be indented and the quote should be followed by the exact reference. Use the \verb+quotation+ environment \LaTeX\xspace provides:
+If long passages are quoted, they should be indented and the quote should be followed by the exact reference. Use the \verb+quote+ environment \LaTeX\xspace provides:
 \begin{quote}
 Precisely constructed models for linguistic structure can play an
 important role, both negative and positive, in the process of discovery 
@@ -245,14 +245,17 @@ Please deliver a \BibTeX\xspace file with all your references together with your
 
 Please provide all first and last names of all authors and editors. Do not use ``et~al.''  in the \BibTeX\xspace file; this will be generated automatically when inserted.
 
-For bipartite family names like ``von Stechow'', ``Van Eynde'', and ``de Hoop'' make sure that these
+% For bipartite family names like ``von Stechow'', ``Van Eynde'', and ``de Hoop'' make sure that these
 family names are contained in curly brackets.
 % These authors will then be cited as \citet{VanEynde2006a} and \citet{vonStechow84a}.
  Note that Dutch names like ``de Hoop'' are not treated differently from other surnames.
 
-Many bibliographies have inconsistent capitalization. We do not use Title Case, i.e. all words are spelled as they would be spelled in running text (sentence case). Hence, we use \em A grammar of Tagalog \em and not \em A Grammar of Tagalog\em. There are two strategies to achieve this: \textsc{decapitalization with protection}, or \textsc{literal output}. If you use decapitalization with protection, all titles and booktitles will be decapitalized.  If there is a proper name in a title, enclose it in \verb+{}+ to prevent decapitalization, e.g. \verb+title = {The Languages of {A}frica}+. Use the same procedure for German nouns and all other characters in titles which should not be decapitalized. This is not necessary for other fields, especially the author and editor fields, where capitalization is kept as is. You can use your *bib file for publisher requiring title case and for publishers requiring sentence case.
+Many bibliographies have inconsistent capitalization. We do not use Title Case, i.e. all words are spelled as they would be spelled in running text (sentence case). Hence, we use \em A grammar of Tagalog \em and not \em A Grammar of Tagalog\em. 
 
-If you opt for literal output, add the option \verb+undecapitalize+ to \verb+\documentclass+ in \verb+main.tex+. In this case, it is your task to lowercase all words in Title Case in your bibliography (\verb+title = {The languages of Africa}+). You cannot use your *bib file for publishers which require Title Case anymore. 
+% There are two strategies to achieve this: \textsc{decapitalization with protection}, or \textsc{literal output}. If you use decapitalization with protection, all titles and booktitles will be decapitalized. 
+If there is a proper name in a title, enclose it in \verb+{}+ to prevent decapitalization, e.g. \verb+title = {The Languages of {Africa}}+. Use the same procedure for German nouns and all other characters in titles which should not be decapitalized. This is not necessary for other fields, especially the author and editor fields, where capitalization is kept as is. You can use your *bib file for publisher requiring title case and for publishers requiring sentence case.
+
+% If you opt for literal output, add the option \verb+undecapitalize+ to \verb+\documentclass+ in \verb+main.tex+. In this case, it is your task to lowercase all words in Title Case in your bibliography (\verb+title = {The languages of Africa}+). You cannot use your *bib file for publishers which require Title Case anymore. 
 
 The references in your \BibTeX\xspace file will automatically be typeset correctly. So, provided the
 \BibTeX\xspace file is correct, authors do not have to worry about this. But there are some things to
