reduce number of nutshell rules

--- a/latexguidelines/inanutshell.tex
+++ b/latexguidelines/inanutshell.tex
@@ -1,6 +1,6 @@
 \section*{Very short summary for the busy linguist}
 \fbox{\parbox{\textwidth}{
-\Large   \sffamily
+\huge   \sffamily
 \begin{itemize}
  \item no \textbf{bold}
  \item no \underline{underline}
@@ -8,10 +8,10 @@
  \item no Special Capitalization
  \item \textit{vernacular} `gloss', ``quotation'', ``scare quote''
  \medskip
- \item no section 2.3.1. if there is no 2.3.2
- \item section 2.3.1 must follow 2.3 immediately without intervening paragraphs
+%  \item no section 2.3.1. if there is no 2.3.2
+%  \item section 2.3.1 must follow 2.3 immediately without intervening paragraphs
  \item acknowledgments in final section, not in footnote
- \medskip
+%  \medskip
  \item footnotes come after punctuation
  \medskip
  \item chapters in edited volumes need an abstract
@@ -19,8 +19,8 @@
  \item use a reference manager (e.g. Zotero)
  \medskip
  \item use Leipzig Glossing Rules
- \item Complete sentences in examples start with a capital letter and end with punctuation.
- \item incomplete sentences with lower case letter and with no period
+%  \item Complete sentences in examples start with a capital letter and end with punctuation.
+%  \item incomplete sentences with lower case letter and with no period
 \end{itemize}
 }
 }
