incorporate MH suggestions

--- a/latexguidelines/inanutshell.tex
+++ b/latexguidelines/inanutshell.tex
@@ -6,13 +6,13 @@
  \item no \underline{underline}
  \item no vertical lines in tables
  \item no Special Capitalization
- \item \textit{vernacular} `gloss', ``quotation'', ``scare quote''
+ \item \textit{object language} `gloss/translation', ``quotation'', ``scare quote''
  \medskip
 %  \item no section 2.3.1. if there is no 2.3.2
 %  \item section 2.3.1 must follow 2.3 immediately without intervening paragraphs
  \item acknowledgments in final section, not in footnote
 %  \medskip
- \item footnotes come after punctuation
+ \item footnote number after punctuation, not before
  \medskip
  \item chapters in edited volumes need an abstract
  \medskip
