documentation of movement arrows

--- a/latexguidelines/localpackages.tex
+++ b/latexguidelines/localpackages.tex
@@ -7,3 +7,11 @@
 \usepackage{pgfplots}
 \usepackage{langsci/styles/langsci-gb4e}
 \usepackage{langsci/styles/langsci-optional}
+\usepackage{langsci/styles/jambox}
+
+\usepackage{listings}% Verbatim can't handle line wrap
+\lstset{
+basicstyle=\ttfamily,
+columns=flexible,
+breaklines=true
+}
