--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -289,6 +289,7 @@ no double parentheses   & \raggedright \verb+This is not true+
 \end{table}
 \nocite{Bresnan82b}% something with an editor.
  
+\newpage  
 If you have an enumeration of references in the text as in \emph{As X, Y, and Z have shown}, please use
 the normal punctuation of the respective language rather than special markup like `;'.
 
