--- a/latexguidelines/langsci/seriesinfo/tmnlp-info.tex
+++ b/latexguidelines/langsci/seriesinfo/tmnlp-info.tex
@@ -4,7 +4,7 @@
 \bigskip
 
 Editors: Oliver Czulo (Universität Leipzig),
-Silvia Hansen-Schirra (Johannes Gutenberg-Universität Mainz), 
+Silvia Hansen-Schirra (Johannes Gutenberg-Universität Mainz),
 Reinhard Rapp (Johannes Gutenberg-Universität Mainz)
 
 \bigskip
@@ -20,8 +20,10 @@ In this series:
 \item Menzel, Katrin, Ekaterina Lapshinova-Koltunski \& Kerstin Anna Kunz  (eds.). New perspectives on cohesion and coherence: Implications for translation.
 \item Hansen-Schirra, Silvia, Oliver Czulo \& Sascha Hofmann (eds). Empirical modelling of translation and interpreting.
 \item Svoboda, Tomáš, Łucja Biel \& Krzysztof Łoboda (eds.). Quality aspects in institutional translation.
-% \item WF
+\item Fox, Wendy. Can integrated titles improve the viewing experience? Investigating the impact of subtitling on the reception and enjoyment of film using eye tracking and questionnaire data.
+\item Moran, Steven \& Michael Cysouw. The Unicode cookbook for linguists: Managing writing systems using orthography profiles.
+\item Fantinuoli, Claudio (ed.). Interpreting and technology.
 % \item SMMC
-%  \item  JN
 % \item LVDV
+% \item WF
 \end{enumerate}
