--- a/latexguidelines/langsci/styles/langsci-optional.sty
+++ b/latexguidelines/langsci/styles/langsci-optional.sty
@@ -273,8 +273,6 @@
 \newcommand{\threedigitexamples}{\exewidth{(234)}}
 \newcommand{\fourdigitexamples}{\exewidth{(2345)}}
 
-\newcommand{\noabstract}{\vspace*{-2\baselineskip}} %for chapters without abstract
-
 \newcommand{\rephrase}[2]{{\color{yellow!30!black}#2}\todo{replaced `#1'}}
 
 \newcommand{\missref}[2][]{\todo[#1]{missing reference #2}}
@@ -336,13 +334,34 @@
     }%
 } 
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%% Extras for use in (some) edited volumes             %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% for chapters without abstract
+\newcommand{\noabstract}{\vspace*{-2\baselineskip}} 
+
+% for papers that have appendices, a replacement for \appendix.
+% Usage: \begin{paperappendix} \section{Title} ... \end{paperappendix
+%        Will result in "Appendix A: Title"
+%
+\newenvironment{paperappendix}{%
+    \let\oldthesection\thesection%
+    \let\oldsectionformat\sectionformat%
+    \setcounter{section}{0}%
+    \def\thesection{\Alph{section}}%
+    \def\sectionformat{\appendixname\ \thesection:\enskip}%
+    }{%
+    \let\thesection\oldthesection%
+    \let\sectionformat\oldsectionformat}
   
 %%%%%%%%%%%%%%%%%%%%
 %%%%           %%%%%
 %%%%   PLOTS   %%%%%
 %%%%           %%%%%
 %%%%%%%%%%%%%%%%%%%%
-
+ 
 \newcommand{\barplot}[4]{%
   \begin{tikzpicture}
     \begin{axis}[
@@ -363,23 +382,57 @@
     \end{axis} 
   \end{tikzpicture} 
 }
-% \usepackage{pgfmath,pgfplotstable}
-% \newcommand{\langsciplot}[2]{%% experimental
-%         \pgfplotstablegetcolsof{#1.csv}
-%         \pgfmathsetmacro{\langscicsvlength}{\pgfplotsretval-1}
-%         \begin{tikzpicture}[trim axis right,trim axis left]
-%             \begin{axis}[
-%                     #2,
-%                     xtick=data,
-%                     axis lines*=left,
-%                     nodes near coords,
-%                     ymin=0,
-%                     width=\textwidth]
-%             \foreach \i in {0,...,\langscicsvlength} {
-%                 \addplot[
-%                     /pgf/number format/read comma as period
-%                     ] table [x index={0},y index={\i}] {#1.csv};
-%             }
-%             \end{axis}    
-%         \end{tikzpicture}
-% }
+\usepackage{pgfmath,pgfplotstable}
+\newcommand{\langsciplot}[2]{%% experimental
+        \pgfplotstablegetcolsof{#1.csv}
+        \pgfmathsetmacro{\langscicsvlength}{\pgfplotsretval-1}
+        \begin{tikzpicture}[trim axis right,trim axis left]
+            \begin{axis}[
+                    #2,
+                    xtick=data,
+                    axis lines*=left,
+                    nodes near coords,
+                    ymin=0,
+                    width=\textwidth]
+            \foreach \i in {0,...,\langscicsvlength} {
+                \addplot[
+                    /pgf/number format/read comma as period
+                    ] table [x index={0},y index={\i}] {#1.csv};
+            }
+            \end{axis}    
+        \end{tikzpicture}
+}
+
+\newcommand{\LSfrac}[1]{{\addfontfeature{Fractions=On}#1}}% Use the fraction glyphs shipped with Libertine. The argument is n/m, where n and m are integers
+
+
+% Provide a raised tie bar for diphthongs and affricates with ascenders
+\newcommand{\hitie}[2]{%
+\mbox{#1}%
+\raisebox{.5mm}{%
+͡%
+}%
+\mbox{#2}%
+}
+
+
+\newcommand{\hitier}[3][.7]{%
+\mbox{#2}%
+\hspace*{#1mm}%
+\raisebox{.5mm}{%
+͡%
+}%
+\hspace*{-#1mm}%
+\mbox{#3}%
+}
+
+
+\newcommand{\hitiel}[3][.7]{%
+\mbox{#2}%
+\hspace*{-#1mm}%
+\raisebox{.5mm}{%
+͡%
+}%
+\hspace*{#1mm}%
+\mbox{#3}%
+}
