--- a/latexguidelines/wrap-global.tex
+++ b/latexguidelines/wrap-global.tex
@@ -2,12 +2,13 @@
 \documentclass[number=0
                 ,series=guidelines,
 	        ,output=guidelines    % long|short|inprep   
+	        ,guidelines
 	        ,modfonts, nonflat
 	        %,blackandwhite
 	        %,smallfont
 % 	        ,draftmode  
 		  ]{langsci/langscibook}    
-                      
+\renewcommand{\lsSeries}{guidelines}                      
 \author{Sebastian Nordhoff and Stefan Müller}
 \title{Language Science Press guidelines}  
 \subtitle{Complete set of guidelines}
@@ -28,6 +29,7 @@
 \include{volumeeditors}
 \include{latex}
 \include{conversion}
+\include{sanitycheck}
 \include{proofreaders}
 \include{indexers}
 \include{typesetters} 
