--- a/latexguidelines/wrap-proofreaders.tex
+++ b/latexguidelines/wrap-proofreaders.tex
@@ -10,6 +10,8 @@
 \BackBody{}
 \typesetter{Sebastian Nordhoff} 
 \author{Stefan Müller, Martin Haspelmath \& Sebastian Nordhoff}
+ 
+\renewcommand{\lsSeries}{guidelines}    
 
 \makeatletter
 \def\verbatim@font{\scriptsize\ttfamily}
@@ -20,7 +22,8 @@
 \subtitle{General rules for proofreaders}
 \BackTitle{Language Science Press proofreading guidelines}    
 \usepackage{langsci/styles/langsci-gb4e}
-\usepackage{langsci/styles/langsci-optional} 
+\usepackage{langsci/styles/langsci-optional}  
+\bibliography{lsp-abbrev,lsp-guidelines}
 \input{localpackages.tex}
 \input{localcommands.tex}
 \begin{document}                
