--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -31,7 +31,7 @@ The back matter is structured as follows:
 
 \chapter{Style rules}
 \section{Generic rules}
-We use the \em Generic Style Rules for Linguistics \em available at \url{http://www.eva.mpg.de/lingua/pdf/GenericStyleRules.pdf}
+We use an abridged version of the \em Generic Style Rules for Linguistics \em available at \url{https://langsci.github.io/gsr/GenericStyleRulesLangsci.pdf}
 
 \section{House rules}\label{sec:houserules}
 The generic rules are complemented by the following house rules:
@@ -289,6 +289,7 @@ no double parentheses   & \raggedright \verb+This is not true+
 \end{table}
 \nocite{Bresnan82b}% something with an editor.
  
+\newpage  
 If you have an enumeration of references in the text as in \emph{As X, Y, and Z have shown}, please use
 the normal punctuation of the respective language rather than special markup like `;'.
 
