--- a/packages/langsci-gb4e/langsci-gb4.tex
+++ b/packages/langsci-gb4e/langsci-gb4.tex
@@ -1,4 +1,4 @@
-\documentclass[output=paper]{langscibook}
+\documentclass[output=guidelines]{langscibook}
 \author{Sebastian Nordhoff}
 \title{langsci-gb4e}
 
